# openads-dev-environment

./: .gitignore  .gitlab-ci.template.yml  .pre-commit-config.yaml  Doxyfile  README.md  copier.yml
.devcontainer/: README.md  build-local-dockerfile.sh  devcontainer.json
.github/workflow_calls/: compose.yml  consistency.yml  docker-ros.yml  industrial_ci.yml
.github/workflows/: compose-oci.yml  compose.yml  consistency-downstream.yml  consistency.yml  docs.yml  industrial_ci.yml  test-compose-generator.yml  test-generators.yml
scripts/: check_downstream_consistency.py  check_repository_consistency.py  contributor_mapping.yml  generate_compose.py  generate_contribution_chart.py  generate_readme.md  generate_readme.py  requirements.txt
scripts/templates/: docker_compose.yml.j2  package_readme.md.j2  top_level_readme.md.j2
template/: .copier-answers.yml.jinja
template/.github/workflows/: docs.yml
tests/: test_generate_compose.py  test_generate_readme.py
tests/generate-compose/sample_pkg/sample_pkg/: README.md  package.xml
tests/generate-compose/sample_pkg_multi_node/sample_pkg_multi_node/: README.md  package.xml
tests/generate-compose/sample_pkg_multi_node/sample_pkg_multi_node/launch/: multi_node.launch.py
tests/generate-compose/sample_pkg_no_params/sample_pkg_no_params/: README.md  package.xml
tests/generate-compose/sample_pkg_no_remappings/sample_pkg_no_remappings/: README.md  package.xml
tests/generate-compose/sample_pkg_other_launch/sample_pkg_other_launch/: README.md  package.xml
(+15 files in other folders)
