<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>sample_pkg_multi_node</name>
  <version>1.0.0</version>
  <description>Sample package</description>

  <maintainer email="opensource@ika.rwth-aachen.de">Institute for Automotive Engineering (ika), RWTH Aachen University</maintainer>
  <author email="opensource@ika.rwth-aachen.de">Institute for Automotive Engineering (ika), RWTH Aachen University</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>